# project3

./: .gitignore  .gitmodules  CMakeLists.txt  PhoneticWeights.txt  README.md  Source.cpp  data_download_links.txt
Final/: CMakeLists.txt  LyricMatcher.h  WordConverter.h  main.cpp
VisualStuff/: CMakeLists.txt  SearchBar.cpp  SearchBar.h  main.cpp
VisualStuff/ImGui/: imconfig.h
VisualStuff/ImGui-SFML/: imgui-SFML.cpp
VisualStuff/assets/: PhoneticWeights.txt
programData/: dictall.csv  read_fileshare.txt
src/: Lyric.h  LyricMatcher.h  LyricsConverter.cpp  WordConverter.h  legacy_main.cpp  main.cpp  test.cpp  wordConverter.h
